Version 1.0.24 Released December 12, 2014

    - Added XMLStreamWriter support to XMLConverter

Version 1.0.18 Released September 19, 2014

    - Accept ACK's containing an MSH.9.2 sub-field

Version 1.0.10 Released May 3, 2012

    - Fix IllegalArgumentException when not using xalan-j
    - Add "content" property to HL7ContentException
    - Added LLPInputStream.skip()

Version 1.0.4 Released Dec 29, 2011

    - Initial release

$Id$