@@ -8,6 +8,7 @@
     <!-- Configure build & stuff -->
     <property name="library.version" value="1.0"/>
     <property name="javac.compiler.flags" value="-Xlint:all"/>
+    <property name="java.source.version" value="1.7"/>
 
     <!-- Import generic build macros -->
     <import file="${basedir}/src/build/macros.xml"/>
